--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -1,3 +1,17 @@
+html {
+	-webkit-user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0); 
+	user-select: none;
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+
+}
+
+* {
+   -webkit-user-select: none;
+}
+
 
 
 
